--- a/Global.css
+++ b/Global.css
@@ -1,4 +1,10 @@
 #myButton {
-    height: 300px;
-    width: 300px; 
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; 
 }
