--- a/Global.css
+++ b/Global.css
@@ -1,10 +1,11 @@
 #myButton {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
+  background-color: #808080;
+  border: 3px solid #121212;
+  color: black;
+  padding: 15px 15px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px; 
+  font-size: 15px;
+  border-radius: 15px;
 }
