--- a/Global.css
+++ b/Global.css
@@ -1,4 +1,8 @@
-#myButton {
+<!-- HTML !-->
+<button class="button-28" role="button">Button 28</button>
+
+/* CSS */
+.button-28 {
   appearance: none;
   background-color: transparent;
   border: 2px solid #1A1A1A;
@@ -26,18 +30,18 @@
   will-change: transform;
 }
 
-#myButton:disabled {
+.button-28:disabled {
   pointer-events: none;
 }
 
-#myButton:hover {
+.button-28:hover {
   color: #fff;
   background-color: #1A1A1A;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
 
-#myButton:active {
+.button-28:active {
   box-shadow: none;
   transform: translateY(0);
 }
