--- a/Global.css
+++ b/Global.css
@@ -1,5 +1,5 @@
 #myButton {
-  background-color: #4CAF50;
+  background-color: #808080;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -7,6 +7,10 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px; 
+}
+
+#myButton:hover {
+  background-color: #909090;
 }
 
 /* I need this to work */
