--- a/style.css
+++ b/style.css
@@ -135,22 +135,24 @@ hr.solid {
 #AnnouncmentText {
   padding: 5px;
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 #AnnouncmentNameText {
   position: relative;
   left: 5%;
-  font-size: 50px;
+  font-size: 55px;
 }
 
 #AnnouncmentName {
-  height: 20%;
+  height: 25%;
   background: rgba(0.5, 0.5, 0.5, 0.5);
   border-radius: 12.5px 12.5px 0px 0px;
 }
 
 #AnnouncmentClose {
+  text-align: center;
+  vertical-align: center;
   margin: 5px;
   position: fixed;
   width: 2%;
