--- a/Global.css
+++ b/Global.css
@@ -12,6 +12,8 @@
   display: inline-block;
   font-size: 16px;
 
+  height: fit-content;
+  
   transition: background-color 0.5s, border-color 0.5s;
 }
 
