--- a/Global.css
+++ b/Global.css
@@ -14,7 +14,9 @@
 
   height: fit-content;
   
-  transition: background-color 0.5s, border-color 0.5s;
+  box-shadow: 0px 2px 5px #454545;
+  
+  transition: background-color 0.5s, border-color 0.5s, box-shadow 0.5s;
 }
 
 #abPos {
