--- a/Global.css
+++ b/Global.css
@@ -16,16 +16,14 @@
   
   box-shadow: 0px 2px 5px #454545;
   
-  transition: background-color 0.5s, border-color 0.5s;
-}
-
-#abPos {
-  /* position: absolute; */
+  transition: background-color 0.25s, box-shadow 0.25s, margin-top 0.25s;
 }
 
 #myButton:hover {
-  border-color: #fff;
   background-color: #707070;
+  
+  margin-top: -0.5%;
+  box-shadow: 0px 5px 6px #454545;
 }
 
 .GameText {
