--- a/Global.css
+++ b/Global.css
@@ -22,7 +22,7 @@
 #myButton:hover {
   background-color: #707070;
   
-  transform: translateY(-0.01);
+  margin-top: -0.1;
   box-shadow: 0px 5px 6px #454545;
 }
 
