--- a/Global.css
+++ b/Global.css
@@ -13,17 +13,15 @@
   font-size: 16px;
 
   height: fit-content;
-  
   box-shadow: 0px 2px 5px #454545;
   
-  transition: background-color 0.25s, box-shadow 0.25s, margin-top 0.25s;
+  transition: background-color 0.25s, box-shadow 0.25s;
 }
 
 #myButton:hover {
   background-color: #707070;
   
-  margin-top: -1;
-  box-shadow: 0px 6px 7px #454545;
+  box-shadow: 0px 5px 5px #454545;
 }
 
 .GameText {
