--- a/Global.css
+++ b/Global.css
@@ -15,12 +15,13 @@
   height: fit-content;
   box-shadow: 0px 2px 5px #454545;
   
-  transition: background-color 0.25s, box-shadow 0.25s;
+  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s;
 }
 
 #myButton:hover {
   background-color: #707070;
   
+  border-color: #fff;
   box-shadow: 0px 3px 5px #545454;
 }
 
