--- a/Global.css
+++ b/Global.css
@@ -13,8 +13,7 @@
   font-size: 16px;
 
   height: fit-content;
-  box-shadow: 2px 2px 5px #454545;
-  box-shadow: -2px -2px 5px #454545;
+  box-shadow: 0 0 10px 5px #353535;
   
   transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s;
 }
@@ -23,8 +22,7 @@
   background-color: #707070;
   
   border-color: black;
-  box-shadow: 4px 4px 5px #545454;
-  box-shadow: -4px -4px 5px #454545;
+  box-shadow: 0 0 15px 5px #353535;
 }
 
 .GameText {
