--- a/Global.css
+++ b/Global.css
@@ -4,7 +4,7 @@
   margin: 5px;
 
   border-style: solid;
-  border-color: white;
+  border-color: black;
   border-width: 2px;
 
   color: white;
@@ -13,16 +13,17 @@
   font-size: 16px;
 
   height: fit-content;
-  box-shadow: 0 0 10px 5px #353535;
+  box-shadow: 0 0 2px 5px #353535;
   
-  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s;
+  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s, font-size 0.25s;
 }
 
 #myButton:hover {
   background-color: #707070;
   
-  border-color: black;
-  box-shadow: 0 0 15px 5px #353535;
+  border-color: white;
+  font-size: 17px;
+  box-shadow: 0 0 5px 5px #353535;
 }
 
 .GameText {
