--- a/Global.css
+++ b/Global.css
@@ -13,17 +13,15 @@
   font-size: 16px;
 
   height: fit-content;
-  box-shadow: 0 0 2px 5px #353535;
+  box-shadow: 0 0 8px 5px #353535;
   
-  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s, font-size 0.25s;
+  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s;
 }
 
 #myButton:hover {
   background-color: #707070;
   
   border-color: white;
-  font-size: 17px;
-  box-shadow: 0 0 5px 5px #353535;
 }
 
 .GameText {
