--- a/Global.css
+++ b/Global.css
@@ -13,9 +13,8 @@
   font-size: 16px;
 
   height: fit-content;
-  box-shadow: 0 0 8px 5px #353535;
   
-  transition: background-color 0.25s, border-color 0.25s, box-shadow 0.25s;
+  transition: background-color 0.5s, border-color 0.5s;
 }
 
 #myButton:hover {
