--- a/style.css
+++ b/style.css
@@ -39,12 +39,11 @@ body {
 }
 
 .Games {
-  margin: auto;
-  width: 80%;
-  height: 100%;
   display: grid;
-  grid-gap: 25px 50px;
-  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-auto-rows: 240px;
 }
 
 #version {
