--- a/style.css
+++ b/style.css
@@ -16,15 +16,26 @@ body {
 
 
 .Game {
-   position: relative;
-   border-style: solid;
-   border-color: #353535;
-   box-shadow: 3px 3px 8px #888888;
-   aspect-ratio: 1 / 2;
-   background-color: #575757;
-   transition: border-color 0.5s, box-shadow 0.5s,
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #575757;
+    font-size: 3rem;
+    color: #fff;
+    box-shadow: 3px 3px 8px #888888;
+    height: 100%;
+    width: 100%;
+    border-radius: 4px;
+    transition: all 500ms;
+    overflow: hidden;
+
+    transition: border-color 0.5s, box-shadow 0.5s,
      margin-left 0.5s, margin-right 0.5s, margin-top 0.5s, margin-bottom 0.5s;
-   display: table-cell;
+  
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .Game:hover {
