--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
    transition: border-color 0.5s, box-shadow 0.5s,
      margin-left 0.5s, margin-right 0.5s, margin-top 0.5s, margin-bottom 0.5s;
    display: table-cell;
-   height: 100px;
 }
 
 .Game:hover {
@@ -46,7 +45,7 @@ body {
   width: 80%;
   
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-template-rows: 1vh;
+  grid-auto-rows: auto;
 }
 
 #version {
