--- a/style.css
+++ b/style.css
@@ -45,12 +45,12 @@ body {
   width: 80%;
   
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-auto-rows: auto;
+  grid-auto-rows: fit-content(1em);
 }
 
 #version {
   border-style: solid;
-  border-color: #353535;
+  border-color: #fff;
 
   margin-bottom: 10px;
 
