--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
    background-color: #575757;
    transition: border-color 0.5s, box-shadow 0.5s,
      margin-left 0.5s, margin-right 0.5s, margin-top 0.5s, margin-bottom 0.5s;
-   display: table-cell;
+   display: flex;
 }
 
 .Game:hover {
@@ -50,7 +50,7 @@ body {
 
 #version {
   border-style: solid;
-  border-color: #fff;
+  border-color: #353535;
 
   margin-bottom: 10px;
 
