--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
    border-style: solid;
    border-color: #353535;
    box-shadow: 3px 3px 8px #888888;
-   height: 50rem;
+   aspect-ratio: 1 / 2;
    background-color: #575757;
    transition: border-color 0.5s, box-shadow 0.5s,
      margin-left 0.5s, margin-right 0.5s, margin-top 0.5s, margin-bottom 0.5s;
