--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 <style>
 /* customizable snowflake styling */
 .snowflake {
-  color: #fff;
+  color: #FFFFFF;
   font-size: 1em;
   font-family: Arial, sans-serif;
   text-shadow: 0 0 5px #000;
