--- a/style.css
+++ b/style.css
@@ -109,9 +109,10 @@ hr.solid {
 		inset 0 80px 80px -40px #ac3223, /* gradient */
 		1px 1px 3px rgba(0,0,0,0.75); /* shadow */
 		
-	bottom: 1%;
-	right: 5%;
-	position: absolute;
+	bottom: 2%;
+	right: 50%;
+	left: 50%;
+	position: relative;
 	overflow: visible; /* IE9 & 10 */
 	-webkit-transition: 500ms linear;
 	   -moz-transition: 500ms linear;
