--- a/style.css
+++ b/style.css
@@ -108,8 +108,9 @@ hr.solid {
     inset 0 0 6px #a23227, /* inner glow */
     inset 0 80px 80px -40px #ac3223, /* gradient */
     1px 1px 3px rgba(0,0,0,0.75); /* shadow */
-    
-  position: relative;
+  bottom: 1%;
+  right: 5%;
+  position: absolute;
   overflow: visible; /* IE9 & 10 */
   -webkit-transition: 500ms linear;
      -moz-transition: 500ms linear;
