--- a/style.css
+++ b/style.css
@@ -108,8 +108,10 @@ hr.solid {
     inset 0 0 6px #a23227, /* inner glow */
     inset 0 80px 80px -40px #ac3223, /* gradient */
     1px 1px 3px rgba(0,0,0,0.75); /* shadow */
-  bottom: 1%;
-  right: 5%;
+  bottom: 2%;
+  left: 50%;
+  display: block;
+  margin-left: -100px;
   position: absolute;
   overflow: visible; /* IE9 & 10 */
   -webkit-transition: 500ms linear;
