--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ body {
   display: none;
 }
 
+.navbar {
+  overflow: hidden;
+  background-color: #C93030;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  color:white;
+  font-size: 20px;
+}
+
 .header {
   font-size: 50px;
   color: white;
