--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body {
   font-size: 50px;
   color: white;
   text-align: center;
-  padding: 40px;
+  padding: 20px;
+  padding-top:45px;
 }
 .Game {
    position: relative;
