--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
   font-size: 20px;
 }
 
+.alert_icon {
+   pading-top:0.6em;
+   width:25px;
+   height:25px;
+}
+
 .header {
   font-size: 50px;
   color: white;
