--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ html {
   background-color: #C93030;
   position: fixed;
   margin:0;
+  padding:0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   color:white;
   font-size: 20px;
 }
