--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ html {
   margin:0;
   padding:0;
   top: 0;
-  width: 100vw;
+  width: 100%;
+  left: 0px;
+  right: 0px;
   color:white;
   font-size: 20px;
 }
