--- a/Settings.css
+++ b/Settings.css
@@ -3,6 +3,7 @@
   top: 5px;
   left: 5px;
   z-index: 10;
+  pointer-events: none;
 }
 
 @keyframes OpenCloseSettings {
@@ -16,6 +17,7 @@
 .SettingsIco {
   width: 5%;
   aspect-ratio: 1 / 1;
+  pointer-events: all;
 }
 
 .SettingsWindow {
