--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@ html {
       left:50%;
       transform:translateX(-50%);
     }
+
+.Showflakes_Shown {
+  opacity: 1;	
+  transition: opacity 0.5s;
+}
+
+.Showflakes_Hidden {
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
 #hidden {
   display: none;
 }
