--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ html {
       transform:translateX(-50%);
     }
 
-.Showflakes_Shown {
+#Showflakes_Shown {
   opacity: 1;	
   transition: opacity 0.5s;
 }
 
-.Showflakes_Hidden {
+#Showflakes_Hidden {
   opacity: 0;
   transition: opacity 0.5s;
 }
