--- a/revamp_style.css
+++ b/revamp_style.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   overflow: hidden;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
