--- a/revamp_style.css
+++ b/revamp_style.css
@@ -105,19 +105,25 @@ body {
 .game_icons {
   display: grid;
   grid-gap: 0.5em 2.5em;
-  position: fixed;
   width: 100%;
   top: 15%;
   left: 10%;
   grid-template-columns: repeat(auto-fill, minmax(250px, 250px));
+  transform: translateY(20vh)  translateX(10px);
 }
 
 .game_holder {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-style: solid;
-  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+
+.game_holder:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .game_holder img {
@@ -144,26 +150,6 @@ body {
   position: absolute;
 }
 
-.selected_bar {
-  background-color: #007CFF;
-  top: 33%;
-  height: 1%;
-  width: 70%;
-  display: none;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-
-.selected_bar_games {
-  background-color: #007CFF;
-  top: 33%;
-  height: 1%;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
 .page_select {
   top: 33.5%;
   width: 71.95%;
