--- a/revamp_style.css
+++ b/revamp_style.css
@@ -159,7 +159,8 @@ body {
 }
 
 .page_selected {
-  transform: translateX(25px) scale(1.1); 
+  transform: translateX(25px) scale(1.1);
+  background-color: rgba(0, 0, 0, 0.1); 
 }
 
 .page_select:hover {
@@ -286,4 +287,3 @@ body {
   margin: auto;
   font-size: 15.5px;
 }
-
