--- a/revamp_style.css
+++ b/revamp_style.css
@@ -153,7 +153,7 @@ body {
 }
 
 .page_selected {
-  transform: translateX(25px) scale(1.1);
+  transform: translateX(15%) scale(1.1);
 }
 
 .page_select:hover {
