--- a/revamp_style.css
+++ b/revamp_style.css
@@ -49,22 +49,13 @@ body {
   overflow-x: hidden;
 }
 
-.play_game_page_body {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-}
-
 .body_page {
   width: 90.47619%;
   height: 100%;
   top: 0;
   bottom: 0;
   right: 0;
-  position: absolute;  
+  position: absolute;
 }
 
 .sidebar {
@@ -194,18 +185,18 @@ body {
     top: 0;
     right: 0;
     height: 49.32%;
-    width: 90.47619%;
+    width: 100%;
     position: absolute;  
 }
 
 .banner_img {
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 .back_arrow {
@@ -222,10 +213,11 @@ body {
 }
 
 .credits {
-    left: 1%;
-    bottom: 0;
-    position: absolute;
+    left: 3px;
+    bottom: -10px;
+    position: fixed;
     font-size: 13px;
+    border-radius: 5px;
 }
 
 .bottom_div {
@@ -237,7 +229,7 @@ body {
 }
 
 .game_cover {
-    left: 2.56%;
+    left: -5%;
     top: 9.67%;
     width: 17.25%;
     position: absolute;
@@ -281,4 +273,8 @@ body {
   height: 80%;
   margin: auto;
   font-size: 15.5px;
+}
+
+#game_name {
+  font-size: 2.15vw;
 }
