--- a/Global.css
+++ b/Global.css
@@ -13,7 +13,7 @@
   font-size: 16px;
 
   height: fit-content;
-  
+
   transition: background-color 0.5s, border-color 0.5s;
 }
 
@@ -48,4 +48,14 @@
 
 .MakePosAbs {
   position: absolute;
+}
+
+.MakePosFixed {
+  position: fixed;
+  z-index: 100;
+}
+
+.CenterButton {
+  left: 50%;
+  transform: translateX(-50%);
 }
