--- a/Global.css
+++ b/Global.css
@@ -5,7 +5,7 @@
 
   border-style: solid;
   border-color: black;
-  border-width: 7px;
+  border-width: 5px;
   border-radius: 15px;
   
   color: white;
@@ -15,13 +15,18 @@
 
   height: fit-content;
 
-  transition: background-color 0.5s, border-color 0.5s;
+  filter: drop-shadow(5px 5px 4px rgba(0, 0,0, 0.5));
+  
+  transition: all 0.5s;
 }
 
 #myButton:hover {
   background-color: #707070;
   
+  transform: scale(1.01);
   border-color: white;
+  
+  filter: drop-shadow(6px 6px 4px rgba(0, 0,0, 0.5));
 }
 
 .GameText {
