--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ body {
   background-color: #a8bbbf;
 }
 
+#support_jay {
+  height: 130px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+}
+
 .text_area {
   left: 50%;
   top: 50%;
