--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   background-color: #a8bbbf;
 }
 
-#support_jay {
+#outbreak_banner {
   height: 130px;
   display: block;
   margin-left: auto;
