--- a/Projects/Suduko/style.css
+++ b/Projects/Suduko/style.css
@@ -152,3 +152,62 @@
 .failed {
   background-color: red !important;
 }
+
+#NewGame {
+  position: fixed;
+
+  width: calc(30vw * 1.25);
+  height: 10vw;
+
+  background-color: rgba(1, 1, 1, 0.6);
+  border-style: solid;
+
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  border-radius: 50px;
+}
+
+.Center {
+  width: auto;
+  text-align: center;
+  font-size: 1.5vw;
+  color: white;
+}
+
+#NewGameButton {
+  position: fixed;
+
+  width: 10vw;
+  height: 2.5vw;
+
+  font-size: 1.5vw;
+
+  border-radius: 10px;
+  background-color: rgb(178, 178, 178);
+
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+}
+
+#NewGameButton:hover {
+  position: fixed;
+
+  width: 10vw;
+  height: 2.5vw;
+
+  font-size: 1.5vw;
+
+  border-radius: 10px;
+  background-color: rgb(138, 138, 138);
+
+  left: 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+}
+
+.Hide {
+  display: none;
+}
